manifests/base/network-policies/strimzi-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-system
  labels:
    istio.io/dataplane-mode: ambient
